tested vanilla desandro masonry

--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "imagesloaded": "^4.1.4",
+    "jquery": "^3.3.1",
+    "jquery-bridget": "^2.0.1",
     "json-server": "^0.14.2",
     "masonry-layout": "^4.2.2",
-    "ng-masonry-grid": "^1.3.0",
+    "ngx-masonry": "^1.1.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -37,9 +39,10 @@
     "@angular/cli": "~7.3.4",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.10.43",
+    "@types/webpack-env": "^1.13.9",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
