--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es5",
+    "types": [
+      "webpack-env"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ],
