--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular-mdc/web": "^0.44.0",
     "@angular/animations": "~7.2.0",
-    "@angular/cdk": "~7.3.3",
+    "@angular/cdk": "^7.3.4",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
